--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "econea/nusoap",
+  "name": "mkislda/nusoap",
   "type": "library",
-  "description": "Fixed NuSOAP for PHP 5.4 - 8.2",
+  "description": "Fixed NuSOAP for PHP",
   "keywords": ["soap","nusoap","php","http","xml","transport","client"],
   "license": "LGPL-2.1-or-later",
   "homepage": "https://github.com/pwnlabs/nusoap",
